Refactor: 구독 게시판 조회와 이모티콘 카탈로그 최적화